# genie-home-runtime

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
crates/genie-home-core/: Cargo.toml
crates/genie-home-core/src/: automation.rs  command.rs  connectivity.rs  device.rs  entity.rs  event.rs  genieos.rs  ha_port.rs  hardware.rs  lib.rs  mcp.rs  migration.rs  mock_hardware.rs  protocol.rs  runtime.rs  safety.rs  scene.rs  scheduler.rs  service.rs  snapshot.rs  validation.rs
crates/genie-home-runtime/: Cargo.toml
crates/genie-home-runtime/src/: main.rs
docs/: home-assistant-reference.md
packaging/systemd/: README.md  genie-home-runtime.service  genie-home-runtime.tmpfiles
