[workspace]
members = [
    "crates/genie-home-core",
    "crates/genie-home-runtime",
]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/GeniePod/genie-home-runtime"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
