[package]
name = "genie-home-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
genie-home-core = { path = "../genie-home-core" }
rusqlite = { version = "0.39", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
